--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="arRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortBold" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortBold.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
