--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,9 +121,6 @@
   <data name="arLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shortSmoothCont" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shortSmoothCont.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="shortBold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shortBold.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -159,5 +156,11 @@
   </data>
   <data name="restore" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\restore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortSmoothContin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortSmoothContin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shortSmoothContr" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortSmoothContr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
