--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -228,6 +228,11 @@
 
 Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
+  <data name="scaleBAmonochrome" xml:space="preserve">
+    <value>Гладкий, криволинейный и в то же время чёткий результат, но монохромный (вследствие чего цвета могут искажаться)
+
+Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
   <data name="scaleBilinearApproximation" xml:space="preserve">
     <value>Чётко видна сеточная структура и может присутствовать звон, но это лучше, чем ближайший сосед
 
