--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -166,4 +166,7 @@
   <data name="shortBAcontrast" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shortBAcontrast.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortBAmonochrome" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortBAmonochrome.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
