--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -228,6 +228,11 @@
 
 Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
+  <data name="scaleBAExtremum" xml:space="preserve">
+    <value>Чёткие края, но контрастно (для точности необходима обратная корректировка) и присутствует большой звон
+
+Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
   <data name="scaleBAmonochrome" xml:space="preserve">
     <value>Гладкий, криволинейный и в то же время чёткий результат, но монохромный (вследствие чего цвета могут искажаться)
 
@@ -285,7 +290,7 @@
   </data>
   <data name="UseGPU" xml:space="preserve">
     <value>Попробовать ускорить процесс за счёт видеокарты? 
-(Это может прервать другие несистемные процессы на видеокарте или наоборот уменьшить скорость)
+(Это может прервать другие несистемные процессы на видеокарте или наоборот уменьшить скорость, результаты обычной версии и для видеокарты могут немного отличаться)
 
 Квадрат - Aвтовыбор
 Галочка - Всегда
