--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -228,6 +228,11 @@
 
 Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
+  <data name="scaleBASmoothContrast" xml:space="preserve">
+    <value>Контрастно и может быть видна сеточная структура
+
+Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
   <data name="scaleBAExtremum" xml:space="preserve">
     <value>Чёткие края, но контрастно (для точности необходима обратная корректировка) и присутствует большой звон
 
@@ -235,6 +240,11 @@
   </data>
   <data name="scaleBAmonochrome" xml:space="preserve">
     <value>Гладкий, криволинейный и в то же время чёткий результат, но монохромный (вследствие чего цвета могут искажаться)
+
+Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
+  <data name="scaleBAmonochrome2" xml:space="preserve">
+    <value>Чёткие границы, но цвета могут искажаться
 
 Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
