--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -191,7 +191,7 @@
     <value>Выбрать метод для увеличения</value>
   </data>
   <data name="MoreVRAM" xml:space="preserve">
-    <value>Более дорогая видеокарта требуется! (Не хватает памяти (VRAM) для такого размера изображения изображения и масштаба)</value>
+    <value>Более дорогая видеокарта требуется! (Не хватает памяти (VRAM) для такого размера выходного изображения и/или точности)</value>
   </data>
   <data name="Next" xml:space="preserve">
     <value>Следующий метод</value>
@@ -227,6 +227,11 @@
     <value>Видна сеточная структура, немного контрастно и может присутствовать звон
 
 Очень очень быстро - Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
+  <data name="scale255BA" xml:space="preserve">
+    <value>Расплывчато, но не размыто, возможно будет нужна обратная корректировка
+
+Очень очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
   <data name="scaleBASmoothContrast" xml:space="preserve">
     <value>Контрастно и может быть видна сеточная структура
@@ -300,7 +305,7 @@
   </data>
   <data name="UseGPU" xml:space="preserve">
     <value>Попробовать ускорить процесс за счёт видеокарты? 
-(Это может прервать другие несистемные процессы на видеокарте или наоборот уменьшить скорость, результаты обычной версии и для видеокарты могут немного отличаться)
+(Это может прервать другие несистемные процессы на видеокарте или наоборот уменьшить скорость, результаты обычной версии и для видеокарты могут немного отличаться, версия для видеокарты может иногда вылетать)
 
 Квадрат - Aвтовыбор
 Галочка - Всегда
@@ -308,5 +313,14 @@
   </data>
   <data name="Wait" xml:space="preserve">
     <value>Обработка...                         %</value>
+  </data>
+  <data name="Resolution" xml:space="preserve">
+    <value>Разрешение картинки в буфере</value>
+  </data>
+  <data name="ETA" xml:space="preserve">
+    <value>Осталось</value>
+  </data>
+  <data name="ImageMinRes" xml:space="preserve">
+    <value>Минимальное разрешение картинки 2х2</value>
   </data>
 </root>
