--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="shortBASmoothContrast" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shortBASmoothContrast.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="short255BA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\short255BA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
