--- a/Strings.ru.resx
+++ b/Strings.ru.resx
@@ -233,6 +233,11 @@
 
 Очень очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
   </data>
+  <data name="scaleThin255BA" xml:space="preserve">
+    <value>Утоньшает объекты и делает их красочнее
+
+Очень медленно, и Вы не можете обрабатывать несколько изображений одновременно</value>
+  </data>
   <data name="scaleBASmoothContrast" xml:space="preserve">
     <value>Контрастно и может быть видна сеточная структура
 
